wip: added pool info widget

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -450,5 +450,6 @@
   "forged_blocks": "Ковани блокове",
   "reward_income": "Доход от възнаграждение",
   "last_forged_block": "Последен подправен блок",
-  "reward_income_info": "Това е сумата от блоковите награди, които сте подправили с тази сметка, сякаш сте самостоятелен миньор и не отразява непременно ефективния ви добив от добив."
+  "reward_income_info": "Това е сумата от блоковите награди, които сте подправили с тази сметка, сякаш сте самостоятелен миньор и не отразява непременно ефективния ви добив от добив.",
+  "no_block_forged": "Все още не е изкован блок"
 }
