--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -450,5 +450,6 @@
   "forged_blocks": "Kovani blokovi",
   "reward_income": "Nagradni prihod",
   "last_forged_block": "Zadnji krivotvoreni blok",
-  "reward_income_info": "Ovo je zbroj blok nagrada koje ste krivotvorili s ovim računom kao da ste samostalni rudar i ne odražava nužno vaš efektivni prihod od rudarstva."
+  "reward_income_info": "Ovo je zbroj blok nagrada koje ste krivotvorili s ovim računom kao da ste samostalni rudar i ne odražava nužno vaš efektivni prihod od rudarstva.",
+  "no_block_forged": "Nijedan blok još nije krivotvoren"
 }
