--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -450,5 +450,6 @@
   "forged_blocks": "Blok Ditempa",
   "reward_income": "Pendapatan Hadiah",
   "last_forged_block": "Blok Ditempa Terakhir",
-  "reward_income_info": "Ini adalah jumlah hadiah blok yang Anda tempa dengan akun ini seolah-olah Anda adalah penambang solo dan tidak selalu mencerminkan pendapatan penambangan efektif Anda."
+  "reward_income_info": "Ini adalah jumlah hadiah blok yang Anda tempa dengan akun ini seolah-olah Anda adalah penambang solo dan tidak selalu mencerminkan pendapatan penambangan efektif Anda.",
+  "no_block_forged": "Belum ada blok yang dipalsukan"
 }
