--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -450,5 +450,6 @@
   "forged_blocks": "Blocchi forgiati",
   "reward_income": "Guadagno premio",
   "last_forged_block": "Ultimo blocco forgiato",
-  "reward_income_info": "Questa è la somma dei premi di blocco che hai forgiato con questo account come se fossi un minatore solista e non riflette necessariamente il tuo reddito di mining effettivo."
+  "reward_income_info": "Questa è la somma dei premi di blocco che hai forgiato con questo account come se fossi un minatore solista e non riflette necessariamente il tuo reddito di mining effettivo.",
+  "no_block_forged": "Nessun blocco ancora forgiato"
 }
