--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -450,5 +450,6 @@
   "forged_blocks": "Kute bloki",
   "reward_income": "Dochód z nagrody",
   "last_forged_block": "Ostatni kuty blok",
-  "reward_income_info": "Jest to suma nagród za blok, które wykułeś za pomocą tego konta, tak jakbyś był samotnym górnikiem i niekoniecznie odzwierciedla Twój efektywny dochód z wydobycia."
+  "reward_income_info": "Jest to suma nagród za blok, które wykułeś za pomocą tego konta, tak jakbyś był samotnym górnikiem i niekoniecznie odzwierciedla Twój efektywny dochód z wydobycia.",
+  "no_block_forged": "Nie ma jeszcze sfałszowanego bloku"
 }
