--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -450,5 +450,6 @@
   "forged_blocks": "Blocos forjados",
   "reward_income": "Renda de recompensa",
   "last_forged_block": "Último Bloco Forjado",
-  "reward_income_info": "Esta é a soma das recompensas em bloco que você forjou com esta conta como se fosse um mineiro solo e não reflete necessariamente sua receita efetiva de mineração."
+  "reward_income_info": "Esta é a soma das recompensas em bloco que você forjou com esta conta como se fosse um mineiro solo e não reflete necessariamente sua receita efetiva de mineração.",
+  "no_block_forged": "Nenhum bloco forjado ainda"
 }
