--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -450,5 +450,6 @@
   "forged_blocks": "Σφυρηλατημένα μπλοκ",
   "reward_income": "Εισόδημα ανταμοιβής",
   "last_forged_block": "Τελευταίο σφυρηλατημένο μπλοκ",
-  "reward_income_info": "Αυτό είναι το άθροισμα των ανταμοιβών μπλοκ που σφυρηλατήσατε με αυτόν τον λογαριασμό σαν να ήσασταν σόλο ανθρακωρύχος και δεν αντικατοπτρίζει απαραίτητα το πραγματικό σας εισόδημα εξόρυξης."
+  "reward_income_info": "Αυτό είναι το άθροισμα των ανταμοιβών μπλοκ που σφυρηλατήσατε με αυτόν τον λογαριασμό σαν να ήσασταν σόλο ανθρακωρύχος και δεν αντικατοπτρίζει απαραίτητα το πραγματικό σας εισόδημα εξόρυξης.",
+  "no_block_forged": "Δεν έχει σφυρηλατηθεί ακόμα κανένα μπλοκ"
 }
