--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -450,5 +450,6 @@
   "forged_blocks": "Forged Blocks",
   "reward_income": "Reward Income",
   "last_forged_block": "Last Forged Block",
-  "reward_income_info": "This is the sum of the block rewards you forged with this account as if you were a solo miner and does not necessarily reflects your effective mining income. "
+  "reward_income_info": "This is the sum of the block rewards you forged with this account as if you were a solo miner and does not necessarily reflects your effective mining income. ",
+  "no_block_forged": "No block forged yet"
 }
