--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -450,5 +450,6 @@
   "forged_blocks": "Bloques forjados",
   "reward_income": "Ingresos de recompensa",
   "last_forged_block": "Último bloque forjado",
-  "reward_income_info": "Esta es la suma de las recompensas en bloque que forjó con esta cuenta como si fuera un minero en solitario y no refleja necesariamente sus ingresos mineros efectivos."
+  "reward_income_info": "Esta es la suma de las recompensas en bloque que forjó con esta cuenta como si fuera un minero en solitario y no refleja necesariamente sus ingresos mineros efectivos.",
+  "no_block_forged": "Aún no se ha forjado ningún bloque"
 }
