--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -450,5 +450,6 @@
   "forged_blocks": "Taotut lohkot",
   "reward_income": "Palkintotulot",
   "last_forged_block": "Viimeinen taottu lohko",
-  "reward_income_info": "Tämä on tällä tilillä väärennettyjen lohkopalkkioiden summa ikään kuin olisit yksin kaivosmies, eikä se välttämättä heijasta todellisia kaivosalan tulojasi."
+  "reward_income_info": "Tämä on tällä tilillä väärennettyjen lohkopalkkioiden summa ikään kuin olisit yksin kaivosmies, eikä se välttämättä heijasta todellisia kaivosalan tulojasi.",
+  "no_block_forged": "Lohkoa ei ole vielä väärennetty"
 }
