--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -450,5 +450,6 @@
   "forged_blocks": "Blocs forgés",
   "reward_income": "Revenu de récompense",
   "last_forged_block": "Dernier bloc forgé",
-  "reward_income_info": "Il s'agit de la somme des récompenses de bloc que vous avez forgées avec ce compte comme si vous étiez un mineur en solo et ne reflète pas nécessairement vos revenus miniers effectifs."
+  "reward_income_info": "Il s'agit de la somme des récompenses de bloc que vous avez forgées avec ce compte comme si vous étiez un mineur en solo et ne reflète pas nécessairement vos revenus miniers effectifs.",
+  "no_block_forged": "Pas encore de bloc forgé"
 }
