--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -450,5 +450,6 @@
   "forged_blocks": "Blocuri forjate",
   "reward_income": "Venituri de recompensă",
   "last_forged_block": "Ultimul bloc falsificat",
-  "reward_income_info": "Aceasta este suma recompenselor blocate pe care le-ați forțat cu acest cont ca și cum ați fi un miner solo și nu reflectă neapărat veniturile dvs. miniere efective."
+  "reward_income_info": "Aceasta este suma recompenselor blocate pe care le-ați forțat cu acest cont ca și cum ați fi un miner solo și nu reflectă neapărat veniturile dvs. miniere efective.",
+  "no_block_forged": "Niciun bloc falsificat încă"
 }
