--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -450,5 +450,6 @@
   "forged_blocks": "Kované bloky",
   "reward_income": "Príjem z odmeny",
   "last_forged_block": "Posledný kovaný blok",
-  "reward_income_info": "Toto je súčet blokových odmien, ktoré ste sfalšovali na tomto účte, ako keby ste boli sólo baník, a nemusí nevyhnutne odrážať váš skutočný príjem z ťažby."
+  "reward_income_info": "Toto je súčet blokových odmien, ktoré ste sfalšovali na tomto účte, ako keby ste boli sólo baník, a nemusí nevyhnutne odrážať váš skutočný príjem z ťažby.",
+  "no_block_forged": "Zatiaľ nie je kovaný žiadny blok"
 }
