--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -451,5 +451,6 @@
   "reward_income": "報酬収入",
   "last_forged_block": "最後に鍛造されたブロック",
   "reward_income_info": "これは、あなたがソロマイナーであるかのようにこのアカウントで偽造したブロック報酬の合計であり、必ずしもあなたの有効なマイニング収入を反映しているわけではありません。",
-  "no_block_forged": "まだ鍛造されたブロックはありません"
+  "no_block_forged": "まだ鍛造されたブロックはありません",
+  "set_reward_recipient_on": "マイニングプールに参加"
 }
