--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -451,5 +451,6 @@
   "reward_income": "Beloning inkomen",
   "last_forged_block": "Laatst gesmeed blok",
   "reward_income_info": "Dit is de som van de blokbeloningen die je met dit account hebt gesmeed alsof je een solo-mijnwerker bent en weerspiegelt niet noodzakelijkerwijs je effectieve mijninkomen.",
-  "no_block_forged": "Nog geen blok gesmeed"
+  "no_block_forged": "Nog geen blok gesmeed",
+  "set_reward_recipient_on": "Lid geworden van Mijnbouwpool op"
 }
