--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -402,7 +402,7 @@
   "success_set_commitment": "Pomyślnie zaktualizowałeś swoje zobowiązanie do wydobycia",
   "error_set_commitment": "Błąd podczas aktualizowania zobowiązania do wydobycia. Pamiętaj, że musisz odczekać 1440 bloków, zanim będziesz mógł odwołać swoje zobowiązanie.",
   "commitment_blocks_enabled": "brakujące bloki do momentu odwołania zobowiązania",
-  "no_reward_recipient": "Do puli nie dołączono jeszcze? ?????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????",
+  "no_reward_recipient": "Do puli nie dołączono jeszcze",
   "commitment_unsupported": "Aktualnie wybrany węzeł nie obsługuje zobowiązania do wydobycia. Wybierz węzeł w wersji co najmniej 3+.",
   "copy_account_address_extended": "Skopiuj adres rozszerzony",
   "copy_account_publickey": "Kopiuj klucz publiczny",
@@ -451,5 +451,6 @@
   "reward_income": "Dochód z nagrody",
   "last_forged_block": "Ostatni kuty blok",
   "reward_income_info": "Jest to suma nagród za blok, które wykułeś za pomocą tego konta, tak jakbyś był samotnym górnikiem i niekoniecznie odzwierciedla Twój efektywny dochód z wydobycia.",
-  "no_block_forged": "Nie ma jeszcze sfałszowanego bloku"
+  "no_block_forged": "Nie ma jeszcze sfałszowanego bloku",
+  "set_reward_recipient_on": "Dołączony basen górniczy włączony"
 }
