--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -451,5 +451,6 @@
   "reward_income": "Доход от вознаграждения",
   "last_forged_block": "Последний кованый блок",
   "reward_income_info": "Это сумма вознаграждений за блоки, которые вы создали с помощью этой учетной записи, как если бы вы были индивидуальным майнером, и не обязательно отражает ваш эффективный доход от майнинга.",
-  "no_block_forged": "Блок еще не создан"
+  "no_block_forged": "Блок еще не создан",
+  "set_reward_recipient_on": "Присоединен к майнинговому пулу"
 }
