--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -451,5 +451,6 @@
   "reward_income": "Дохід від винагороди",
   "last_forged_block": "Останній підроблений блок",
   "reward_income_info": "Це сума блочних винагород, які ви підробили за допомогою цього облікового запису, як якщо б ви були сольним майнером і не обов'язково відображали ваш ефективний дохід від майнінгу.",
-  "no_block_forged": "Ще жодного блоку не підроблено"
+  "no_block_forged": "Ще жодного блоку не підроблено",
+  "set_reward_recipient_on": "Приєднався до майнингового пулу"
 }
