--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -451,5 +451,6 @@
   "reward_income": "奖励收入",
   "last_forged_block": "最后锻造的块",
   "reward_income_info": "这是您使用该账户伪造的区块奖励总和，就好像您是一个单独的矿工一样，并不一定反映您的有效挖矿收入。",
-  "no_block_forged": "还没有锻造块"
+  "no_block_forged": "还没有锻造块",
+  "set_reward_recipient_on": "加入矿池"
 }
