--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -451,5 +451,6 @@
   "reward_income": "Наградни приход",
   "last_forged_block": "Последњи фалсификовани блок",
   "reward_income_info": "Ово је збир блок награда које сте зарадили на овом рачуну као да сте самостални рудар и не одражава нужно ваш ефективни приход од рударства.",
-  "no_block_forged": "Још увек није фалсификован блок"
+  "no_block_forged": "Још увек није фалсификован блок",
+  "set_reward_recipient_on": "Придружио се Мининг Поол он"
 }
