--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -42,12 +42,12 @@
   "ask_order": "Продажа ордера",
   "ask_order_cancellation": "Отмена ордера на продажу",
   "ask_order_placement": "Размещение ордера на продажу",
-  "asset": "Токен",
+  "asset": "Токены",
   "asset_decimals": "Десятичные знаки",
   "asset_issuance": "Выпуск токенов",
   "asset_name": "Имя токена",
   "asset_transfer": "Перевод токенов",
-  "assets": "Жетоны",
+  "assets": "Токены",
   "attachment": "Вложение",
   "back": "Назад",
   "balance": "Остаток средств",
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Нечитаемый формат",
   "current_version": "Текущая версия",
   "dashboard": "Панель управления",
-  "dashboard_welcome_title": "Добро пожаловать в Сигнум! После того, как на этом счете будут проводиться транзакции, здесь появится история его баланса.",
+  "dashboard_welcome_title": "Добро пожаловать в Signum! После того, как на этом счете будут совершены транзакции, его история баланса отобразится.",
   "data": "Данные",
   "date": "Дата",
   "deadline": "Крайний срок",
@@ -235,7 +235,7 @@
   "messages": "Сообщения",
   "minimum_fee": "Минимально",
   "multi_out_payment": "Мульти-платежи",
-  "my_assets": "Мои жетоны",
+  "my_assets": "Мои токены",
   "name": "Название",
   "network": "Сеть",
   "new_message": "Новое сообщение",
@@ -427,30 +427,30 @@
   "unknown_address": "Неизвестный адрес",
   "success_transaction_executed": "Транзакция успешно выполнена",
   "no_tokens_available": "Нет доступных токенов",
-  "trade_tokens_with": "Обменять токены с",
-  "simple": "Простой",
+  "trade_tokens_with": "Обменять токены в",
+  "simple": "Обычный",
   "trader": "Трейдер",
-  "miner": "Шахтер",
+  "miner": "Майнер",
   "power": "Опытный пользователь",
-  "user_profile_desc_simple": "Упрощенная приборная панель. Лучше всего для пользователей начального уровня.",
+  "user_profile_desc_simple": "Упрощенная панель управления. Лучше всего для пользователей начального уровня.",
   "user_profile_desc_power": "Расширенная панель управления с большим количеством дополнительной информации.",
-  "user_profile_desc_miner": "Дашборд с дополнительной информацией для майнеров.",
-  "user_profile_desc_trader": "Панель инструментов с большим количеством торговой информации и дополнительными графиками.",
-  "select_profile": "Выберите профиль пользователя для разных панелей мониторинга",
-  "define_your_salt": "Определите свою индивидуальную соль",
-  "enter_salt": "Введите произвольный буквенно-цифровой текст",
-  "salt_hint": "Чтобы повысить безопасность вашей ключевой фразы, ваш собственный индивидуальный текстовый элемент (соль) добавляется в случайно сгенерированный список слов. Это должно быть простое короткое буквенно-цифровое выражение, например, что-то личное или сгенерированное случайным образом.",
-  "salt": "Добавить соль",
+  "user_profile_desc_miner": "Панель управления с дополнительной информацией для майнеров.",
+  "user_profile_desc_trader": "Панель управления с большим количеством торговой информации и дополнительными графиками.",
+  "select_profile": "Выберите профиль для отображения разных вариантов панели управления",
+  "define_your_salt": "Укажите свою индивидуальную фразу",
+  "enter_salt": "Введите произвольные символы",
+  "salt_hint": "Чтобы повысить безопасность вашей секретной фразы, введите ваши собственные индивидуальные символы, которые будут добавлены в конце случайно сгенерированного списка слов. Это должно быть простое короткое буквенно-цифровое выражение, например, что-то личное или сгенерированное случайным образом.",
+  "salt": "Добавить свою фразу",
   "your_new_account": "Ваша учетная запись Signum",
   "click_to_print": "Нажмите, чтобы распечатать",
   "show_whitespaces": "Показать пробелы",
   "price_change": "Изменение цены",
   "balance_reserved": "Зарезервированный баланс",
-  "tokens_total_balance": "Предполагаемый общий баланс токенов",
-  "forged_blocks": "Кованые блоки",
-  "reward_income": "Доход от вознаграждения",
-  "last_forged_block": "Последний кованый блок",
-  "reward_income_info": "Это сумма вознаграждений за блоки, которые вы создали с помощью этой учетной записи, как если бы вы были индивидуальным майнером, и не обязательно отражает ваш эффективный доход от майнинга.",
+  "tokens_total_balance": "Расчетный общий баланс токенов",
+  "forged_blocks": "Создано блоков",
+  "reward_income": "Общий доход",
+  "last_forged_block": "Последний созданный блок",
+  "reward_income_info": "Это сумма вознаграждений за пойманные блоки, которую вы бы заработали на этом аккаунте, если бы были соло майнером. Статистика отображает теоретический доход от майнинга",
   "no_block_forged": "Блок еще не создан",
-  "set_reward_recipient_on": "Присоединен к майнинговому пулу"
+  "set_reward_recipient_on": "Присоединен к майнинг пулу"
 }
