--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -452,5 +452,5 @@
   "last_forged_block": "Последен подправен блок",
   "reward_income_info": "Това е сумата от блоковите награди, които сте подправили с тази сметка, сякаш сте самостоятелен миньор и не отразява непременно ефективния ви добив от добив.",
   "no_block_forged": "Все още не е изкован блок",
-  "set_reward_recipient_on": "Присъединен към Mining Pool на"
+  "set_reward_recipient_on": "Присъедини се"
 }
