--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -452,5 +452,5 @@
   "last_forged_block": "Letzter geschmiedeter Block",
   "reward_income_info": "Dies ist die Summe der Blockbelohnungen, die Du mit diesem Konto geschmiedet hast, als ob Du ein Solo-Miner wärst, und spiegelt nicht unbedingt Dein effektives Mining-Einkommen wider.",
   "no_block_forged": "Noch kein Block geschmiedet",
-  "set_reward_recipient_on": "Dem Mining Pool beigetreten am"
+  "set_reward_recipient_on": "Beigetreten am"
 }
