--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -452,5 +452,5 @@
   "last_forged_block": "Τελευταίο σφυρηλατημένο μπλοκ",
   "reward_income_info": "Αυτό είναι το άθροισμα των ανταμοιβών μπλοκ που σφυρηλατήσατε με αυτόν τον λογαριασμό σαν να ήσασταν σόλο ανθρακωρύχος και δεν αντικατοπτρίζει απαραίτητα το πραγματικό σας εισόδημα εξόρυξης.",
   "no_block_forged": "Δεν έχει σφυρηλατηθεί ακόμα κανένα μπλοκ",
-  "set_reward_recipient_on": "Έγινε μέλος στο Mining Pool on"
+  "set_reward_recipient_on": "Έγινε μέλος"
 }
