--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -452,5 +452,5 @@
   "last_forged_block": "Dernier bloc forgé",
   "reward_income_info": "Il s'agit de la somme des récompenses de bloc que vous avez forgées avec ce compte comme si vous étiez un mineur en solo et ne reflète pas nécessairement vos revenus miniers effectifs.",
   "no_block_forged": "Pas encore de bloc forgé",
-  "set_reward_recipient_on": "A rejoint le pool minier le"
+  "set_reward_recipient_on": "Inscrit le"
 }
