--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -452,5 +452,5 @@
   "last_forged_block": "अंतिम जाली ब्लॉक",
   "reward_income_info": "यह आपके द्वारा इस खाते के साथ जाली पुरस्कारों का योग है जैसे कि आप एक एकल खनिक थे और जरूरी नहीं कि यह आपकी प्रभावी खनन आय को दर्शाता हो।",
   "no_block_forged": "अभी तक कोई ब्लॉक जाली नहीं है",
-  "set_reward_recipient_on": "माइनिंग पूल में शामिल हुए"
+  "set_reward_recipient_on": "पर शामिल हुए"
 }
