--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -452,5 +452,5 @@
   "last_forged_block": "Blok Ditempa Terakhir",
   "reward_income_info": "Ini adalah jumlah hadiah blok yang Anda tempa dengan akun ini seolah-olah Anda adalah penambang solo dan tidak selalu mencerminkan pendapatan penambangan efektif Anda.",
   "no_block_forged": "Belum ada blok yang dipalsukan",
-  "set_reward_recipient_on": "Bergabung dengan Mining Pool pada"
+  "set_reward_recipient_on": "Bergabung pada"
 }
