--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -452,5 +452,5 @@
   "last_forged_block": "Paskutinis suklastotas blokas",
   "reward_income_info": "Tai blokinių atlygių, kuriuos sukūrėte naudodami šią sąskaitą, suma, tarsi būtumėte vienas kalnakasis, ir nebūtinai atspindi jūsų faktines kasybos pajamas.",
   "no_block_forged": "Dar nėra suklastotas blokas",
-  "set_reward_recipient_on": "Prisijungė prie kasybos baseino"
+  "set_reward_recipient_on": "Prisijungė"
 }
