--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -452,5 +452,5 @@
   "last_forged_block": "Ostatni kuty blok",
   "reward_income_info": "Jest to suma nagród za blok, które wykułeś za pomocą tego konta, tak jakbyś był samotnym górnikiem i niekoniecznie odzwierciedla Twój efektywny dochód z wydobycia.",
   "no_block_forged": "Nie ma jeszcze sfałszowanego bloku",
-  "set_reward_recipient_on": "Dołączony basen górniczy włączony"
+  "set_reward_recipient_on": "Dołączył w dniu"
 }
