--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -452,5 +452,5 @@
   "last_forged_block": "Último Bloco Forjado",
   "reward_income_info": "Esta é a soma das recompensas em bloco que você forjou com esta conta como se fosse um mineiro solo e não reflete necessariamente sua receita efetiva de mineração.",
   "no_block_forged": "Nenhum bloco forjado ainda",
-  "set_reward_recipient_on": "Ingressou polo de mineração em"
+  "set_reward_recipient_on": "Aderiu em"
 }
