--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -452,5 +452,5 @@
   "last_forged_block": "Poslední kovaný blok",
   "reward_income_info": "Toto je součet odměn z bloků, které jste zfalšovali s tímto účtem, jako byste byli sólo miner, a nemusí nutně odrážet váš efektivní příjem z těžby.",
   "no_block_forged": "Žádný blok zatím nebyl vykován",
-  "set_reward_recipient_on": "Připojen k těžebnímu fondu dne"
+  "set_reward_recipient_on": "Připojil se dne"
 }
