--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -452,5 +452,5 @@
   "last_forged_block": "Viimeinen taottu lohko",
   "reward_income_info": "Tämä on tällä tilillä väärennettyjen lohkopalkkioiden summa ikään kuin olisit yksin kaivosmies, eikä se välttämättä heijasta todellisia kaivosalan tulojasi.",
   "no_block_forged": "Lohkoa ei ole vielä väärennetty",
-  "set_reward_recipient_on": "Liittyi kaivosaltaaseen"
+  "set_reward_recipient_on": "Liittyi"
 }
