--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -452,5 +452,5 @@
   "last_forged_block": "Последний созданный блок",
   "reward_income_info": "Это сумма вознаграждений за пойманные блоки, которую вы бы заработали на этом аккаунте, если бы были соло майнером. Статистика отображает теоретический доход от майнинга",
   "no_block_forged": "Блок еще не создан",
-  "set_reward_recipient_on": "Присоединен к майнинг пулу"
+  "set_reward_recipient_on": "Присоединился"
 }
