fix: deeplink issues

--- a/mobile/src/translations/de.json
+++ b/mobile/src/translations/de.json
@@ -215,7 +215,7 @@
         "autoNodeSelection": "Automatische Peerauswahl",
         "copyright": "Copyright © Signum Network",
         "credits": "Danke an blankey1337 und titanishu",
-        "showTestnetNodes": "Testnet-Knoten anzeigen"
+        "showTestnetNodes": "Testnet-Peers anzeigen"
       }
     }
   }
