--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -431,7 +431,7 @@
   "simple": "Sencillo",
   "trader": "Comerciante",
   "miner": "Minero",
-  "power": "Usuario de poder",
+  "power": "Completo",
   "user_profile_desc_simple": "Panel de control simplificado. Lo mejor para usuarios de nivel de entrada.",
   "user_profile_desc_power": "Panel avanzado con mucha información adicional.",
   "user_profile_desc_miner": "Tablero con información adicional para mineros.",
