wip: working on distribution

--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -22,6 +22,7 @@
   "add_note_to_self_q": "Add Note to Self?",
   "add_recipient": "Add Recipient",
   "add_recipient_batch": "Adding multiple recipients by CSV",
+  "add_treasury_account": "Add Treasury Account",
   "address": "Address",
   "advanced": "advanced",
   "alias": "Alias",
@@ -110,6 +111,7 @@
   "delivery_deadline": "Delivery Deadline",
   "description": "Description",
   "do_not_broadcast": "Do Not Broadcast",
+  "distribution_tokenholders": "Token Holder Distribution",
   "domain": "Domain",
   "download": "Download",
   "download_at_verified_source": "Download directly from verified source",
@@ -234,6 +236,7 @@
   "message_is_text": "Message is Text?",
   "messages": "Messages",
   "minimum_fee": "Minimum",
+  "mint_token": "Token Minting",
   "multi_out_payment": "Payments",
   "my_assets": "My Tokens",
   "name": "Name",
