feat: a lot of stuff

--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -50,6 +50,7 @@
   "asset_transfer": "Token Transfer",
   "assets": "Tokens",
   "attachment": "Attachment",
+  "avgCommitment": "Avg. Commitment",
   "back": "Back",
   "balance": "Balance",
   "base_target": "Base Target",
@@ -68,6 +69,7 @@
   "buy": "Buy",
   "buyer": "Buyer",
   "cancel": "Cancel",
+  "cashback_id": "Cashback ID",
   "cheap_fee": "Cheap",
   "choose_delimiter": "Choose a Delimiter",
   "click_for_changes": "Click here to see what has changed",
@@ -189,6 +191,8 @@
   "escrow": "Escrow",
   "failed": "Failed",
   "fee": "Fee",
+  "feeCashback": "Cashback Fee",
+  "feeBurnt": "Burnt Fee",
   "fee_nqt": "Fee",
   "feedback": "Feedback",
   "finish": "Finish",
@@ -422,6 +426,7 @@
   "youve_got_from": "Account __a__ got __b__ from __c__",
   "you_sent_to": "Account __a__ sent __b__ to __c__",
   "show_testnet_nodes": "Show Testnet Nodes",
+  "show_in_explorer": "Open Blockchain explorer",
   "message_too_long": "Message is too long",
   "reset": "Reset",
   "last_price": "Last Price",
