feat: revamped peers list

--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -375,6 +375,7 @@
   "update_burst_account": "Import existing account",
   "update_check": "Update Check",
   "update_up_to_date": "You have the latest release already. There is no need to update.",
+  "updated": "Updated",
   "uploaded": "Uploaded",
   "uri": "URI",
   "valid": "Valid",
