fixes: improved dashboard loading

--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -332,6 +332,10 @@
   "set_account_info": "Set Account Info",
   "set_reward_recipient": "Join Pool",
   "settings": "Settings",
+  "settings_node": "Node Configuration",
+  "settings_notification": "Desktop Notifications",
+  "notifications_enabled": "Notifications enabled",
+  "notifications_disabled": "Notifications disabled",
   "signature": "Signature",
   "signature_hash": "Signature Hash",
   "smart_contract": "Smart Contract",
@@ -420,6 +424,7 @@
   "node_successfully_connected": "Successfully connected to the node",
   "selected_node": "Currently selected node",
   "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "toggle_desktop_notification": "Enable or disable Desktop Notifications",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
   "self": "self",
